package mobilefactory.production.samsung;

import mobilefactory.mobileComponent.Battery;

public class SamsungBattery extends Battery {
}
