@startuml

title __SAMSUNG's Class Diagram__\n

  namespace mobilefactory {
    namespace production.samsung {
      class mobilefactory.production.samsung.SamsungAntenna {
      }
    }
  }
  

  namespace mobilefactory {
    namespace production.samsung {
      class mobilefactory.production.samsung.SamsungBattery {
      }
    }
  }
  

  namespace mobilefactory {
    namespace production.samsung {
      class mobilefactory.production.samsung.SamsungCamera {
      }
    }
  }
  

  namespace mobilefactory {
    namespace production.samsung {
      class mobilefactory.production.samsung.SamsungNote8 {
          + SamsungNote8()
          + producing()
      }
    }
  }
  

  mobilefactory.production.samsung.SamsungAntenna -up-|> mobilefactory.mobileComponent.Antenna
  mobilefactory.production.samsung.SamsungBattery -up-|> mobilefactory.mobileComponent.Battery
  mobilefactory.production.samsung.SamsungCamera -up-|> mobilefactory.mobileComponent.Camera
  mobilefactory.production.samsung.SamsungNote8 -up-|> mobilefactory.MobilePhone
  mobilefactory.production.samsung.SamsungNote8 o-- mobilefactory.MobilePhoneFactory : mobilePhoneFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
